# rustcc

./: .gitignore  Cargo.toml  Makefile  global_not_initialized  global_not_initialized.c  out  test.s
src/: Readme.md  arm_generator.rs  codegen.rs  codegen_enums.rs  lexer.rs  lib.rs  main.rs  ops.rs  parser.rs  parser_II.rs  parser_enums.rs  parser_precedence.rs  parser_types.rs  utils.rs  x86_generator.rs
src/codegen/: arm_generator.rs  asm_generator.rs  codegen.rs  codegen_enums.rs  context.rs  function_map.rs  mod.rs  risc_v_generator.rs  x86_generator.rs
src/lexer/: lexer.rs  mod.rs
src/lexing/: lexer.rs  lexer_enums.rs
src/parser/: ops.rs  parser.rs
src/parsing/: mod.rs  ops.rs  parser.rs  parser_types.rs
src/utils/: context.rs  error.rs  function_context.rs  mod.rs  scoped_map.rs  types.rs
tests/: stages.md  test_compiler.sh
tests/invalid/: more_than_two_args.c  non_int_main.c  two_args_not_argc_argv.c
tests/stage_11/invalid/: no_main.c
tests/stage_12/invalid/: assign_void_to_var.c  return_int_from_char  return_int_from_char.c
tests/stage_12/valid/: char_and_int  char_and_int.c  sizeof_char.c  sizeof_int.c
tests/stage_13/invalid/: leading_digit.c  non_alphanumeric_ascii_char.c  non_ascii_char.c
tests/stage_14/valid/: heads_or_tails.c
tests/stage_15/valid/: goto.c  labels_no_jmp.c
tests/stage_16/valid/: grade.c
tests/stage_3/valid/: add
tests/stage_4/valid/: skip_on_failure_multi_short_circuit  skip_on_failure_multi_short_circuit.c
tests/stage_9/valid/: expression_args.c  fib  no_arg.c  too_many_args.c
