[package]
name = "rustcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
enum_dispatch = "0.3.11"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
thiserror = "1.0.40"
